Grammar.txt
STATEMENT_SEQUENCE -> STATEMENT STATEMENT_SEQUENCE
STATEMENT_SEQUENCE -> ' '
STATEMENT -> var ID ;
STATEMENT -> ID = EXPRESSION ;
STATEMENT -> print ( DISPLAY_LIST ) ;
STATEMENT -> while ( EBOOL ) STATEMENT
STATEMENT -> { STATEMENT_SEQUENCE }
STATEMENT -> if ( EBOOL ) STATEMENT REST_IF
STATEMENT -> move VAL VAL_SEQUENCE
STATEMENT -> penup
STATEMENT -> pendown
STATEMENT -> home
STATEMENT -> fd || forward SPRIME
STATEMENT -> bk || backward SPRIME
STATEMENT -> rt || right SPRIME
STATEMENT -> lt || left SPRIME
SPRIME -> VAL
SPRIME -> EXPRESSION
STATEMENT -> fd
REST_IF -> else STATEMENT
REST_IF -> ' '
EXPRESSION -> TERM EPRIME
EPRIME -> + TERM EPRIME
EPRIME -> - TERM EPRIME
EPRIME -> ' '
TERM -> FACTOR TPRIME
TPRIME -> * FACTOR TPRIME
TPRIME -> / FACTOR TPRIME
TPRIME -> ' '
FACTOR -> ID
FACTOR -> NUMBER
FACTOR -> STRING
FACTOR -> ( EXPRESSION )
EBOOL -> EXPRESSION == EXPRESSION
EBOOL -> EXPRESSION >= EXPRESSION
EBOOL -> EXPRESSION <= EXPRESSION
EBOOL -> EXPRESSION != EXPRESSION
EBOOL -> EXPRESSION < EXPRESSION
EBOOL -> EXPRESSION > EXPRESSION
EBOOL -> TRUE
EBOOL -> FALSE
DISPLAY_LIST -> ELEMENT ELEMENT_SEQUENCE
DISPLAY_LIST -> ' '
ELEMENT_SEQUENCE -> , ELEMENT ELEMENT_SEQUENCE
ELEMENT_SEQUENCE -> ' '
ELEMENT -> ID
ELEMENT -> NUMBER
ELEMENT -> STRING
VAL -> NUMBER
VAL -> ID
VAL_SEQUENCE -> VAL VAL_SEQUENCE
VAL_SEQUENCE -> ' '

ID -> CHARACTER (CHARACTER || DIGIT)*
NUMBER -> DIGIT (DIGIT)*
STRING -> " ANY_CHARACTER* "
TRUE -> '#t'
FALSE -> '#f'
